--- a/idscp_core/Cargo.toml
+++ b/idscp_core/Cargo.toml
@@ -11,9 +11,12 @@ thiserror = "1.0.24"
 log = "0.4.14"
 protobuf = { version = "2.22.1", features = ["with-bytes"] }
 bytes = "1.0.1"
+futures = "0.3.14"
+tokio = {version = "1.5.0", features = ["full"]}
 
 [build-dependencies]
 protoc-rust = "2.8.1"
 
 [dev-dependencies]
 env_logger = "0.8.3"
+tokio-test = "0.4.1"
