--- a/idscp_core/Cargo.toml
+++ b/idscp_core/Cargo.toml
@@ -11,6 +11,7 @@ thiserror = "1.0.24"
 log = "0.4.14"
 protobuf = { version = "2.22.1", features = ["with-bytes"] }
 bytes = "1.0.1"
+byteorder = "1.4.3"
 futures = "0.3.14"
 tokio = {version = "1.5.0", features = ["full"]}
 
