Improve project structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = [
-    "idscp_default_drivers",
-    "idscp_core",
+    "idscp2_default_drivers",
+    "idscp2_core",
+    "idscp2_tests",
 ]
