--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,20 +2,20 @@ name: Rust
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, develop ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, develop ]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  rust-latest-ubuntu:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
+    - name: Install Linux Dependencies
+      run: apt-get update -yq && apt-get install -y protobuf-compiler && protoc --version
     - name: Build
       run: cargo build --verbose
     - name: Run tests
