--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,7 +10,27 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  rust-latest-ubuntu:
+  # Check code quality
+  rust-code-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Rust Components
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          components: clippy, rustfmt
+      - name: Install Linux Dependencies
+        run: sudo apt-get update -yq && sudo apt-get install -y protobuf-compiler && protoc --version
+      # Requires a build due to protobuf modules
+      - name: Build
+        run: cargo build --verbose
+      - name: Format and Clippy
+        run: cargo fmt --all -- --check && cargo clippy --all-targets --all-features -- -D warnings
+        continue-on-error: true
+
+  # Check build and tests on latest ubuntu using stable rust
+  rust-stable-ubuntu:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -20,3 +40,21 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+
+    # Check build and tests on latest ubuntu using nightly rust
+  rust-nightly-ubuntu:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Rust Nightly Toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+      - name: Install Linux Dependencies
+        run: sudo apt-get update -yq && sudo apt-get install -y protobuf-compiler && protoc --version
+      - name: Build
+        run: cargo build --verbose
+      - name: Run tests
+        run: cargo test --verbose
+
+
