--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -7,11 +7,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: nightly
           override: true
+
+      - name: Install Linux Dependencies
+        run: sudo apt-get update -yq && sudo apt-get install -y protobuf-compiler && protoc --version
+
       - name: Run Tests
         uses: actions-rs/cargo@v1
         with:
