--- a/idscp2_core/Cargo.toml
+++ b/idscp2_core/Cargo.toml
@@ -10,13 +10,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thiserror = "1.0.30"
-log = "0.4.16"
+thiserror = "1.0"
+log = "0.4"
 protobuf = { version = "2.27.1", features = ["with-bytes"] }
-bytes = "1.1.0"
-byteorder = "1.4.3"
-futures = "0.3.21"
-tokio = {version = "1.17.0", features = ["full"]}
+bytes = "1.1"
+byteorder = "1.4"
+futures = "0.3"
+tokio = {version = "1.17", features = ["full"]}
 
 [build-dependencies]
 protoc-rust = "2.27.1"
@@ -25,3 +25,8 @@ protoc-rust = "2.27.1"
 env_logger = "0.9.0"
 tokio-test = "0.4.2"
 rand = "^0.8.5"
+criterion = "0.3"
+
+[[bench]]
+name = "tokio_idscp_connection"
+harness = false
