--- a/idscp2_core/Cargo.toml
+++ b/idscp2_core/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tinyvec = "1.6"
 thiserror = "1.0"
 log = "0.4"
 protobuf = { version = "2.27.1", features = ["with-bytes"] }
