--- a/idscp2_core/Cargo.toml
+++ b/idscp2_core/Cargo.toml
@@ -26,6 +26,7 @@ env_logger = "0.9.0"
 tokio-test = "0.4.2"
 rand = "^0.8.5"
 criterion = "0.3"
+lazy_static = "1.4.0"
 
 [[bench]]
 name = "tokio_idscp_connection"
