--- a/idscp2_core/Cargo.toml
+++ b/idscp2_core/Cargo.toml
@@ -16,6 +16,7 @@ log = "0.4"
 protobuf = { version = "2.27.1", features = ["with-bytes"] }
 bytes = "1.1"
 futures = "0.3"
+async-trait = "0.1.57"
 tokio = {version = "1.17", features = ["full"] }
 openssl = "0.10.41"
 
